# computational_mathematics

./: Cargo.toml  pyproject.toml
.github/workflows/: rust.yml
python/: test.py
python/comp_math/: __init__.py
python/computational_mathematics/: __init__.py
src/: calculus.rs  herons_method.rs  interpolation.rs  lib.rs  root_finding.rs
src/calculus/: differentiation.rs  first_derivative.rs  integration.rs  second_derivative.rs  util.rs
src/interpolation/: barycentric_lagrange_interpolation.rs  chebyshev_nodes.rs  cubic_spline_interpolation.rs  fast_fourier_transform.rs  lagrange_interpolation.rs  newtons_divided_difference_interpolation.rs  polynomial.rs  util.rs
src/root_finding/: bisection_method.rs  herons_method.rs  mod.rs  newton_raphson_method.rs  secant_method.rs
