[package]
name = "computational_mathematics"
version = "0.1.0"
edition = "2024"

[lib]
name = "computational_mathematics"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.33.3"
num-complex = "0.4.6"
rayon = "1.12.0"

[dependencies.pyo3]
version = "0.27.0"
features = ["abi3-py38", "num-complex"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
