[project]
name = "computational_mathematics"
version = "0.1.0"
description = "Algorithms for Computational Mathematics"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.4.2",
    "setuptools>=82.0.0",
]
dynamic = ["readme"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff.lint]
ignore = ["E731"]
